@@ -22,6 +22,7 @@ ufw (0.30) UNRELEASED; urgency=low
   * manpage fixes thanks to Loic Minier
   * set "default" sysctl values before "all" values. Thanks to Loic Minier
   * clean up parser to make it easier to add new functionality
+  * don't log LIMIT rules if logging is off (LP: #512131)
 
  -- Jamie Strandboge <jamie@ubuntu.com>  Thu, 14 Jan 2010 07:24:36 -0600
 
